--- a/lib/generators/forum_monster/templates/views/forum_categories/index.html.erb
+++ b/lib/generators/forum_monster/templates/views/forum_categories/index.html.erb
@@ -1,12 +1,12 @@
-<div class="right controls"><%= link_to "New Forum Category", new_category_path %></div>
+<div class="right controls"><%= link_to "New Forum ForumCategory", new_category_path %></div>
 <% @categories.each do |category| %>
   <div class="module">
     <div class="module_header">
       <%= category.title %>
       <span class="controls right smaller">
         <%= link_to "New Forum", new_forum_path %>
-        <%= link_to "Edit Category", edit_category_path(category) %>
-        <%= link_to "Delete Category", category_path(category), :confirm => "Are you sure you want to delete this category?", :method => :delete %>
+        <%= link_to "Edit ForumCategory", edit_category_path(category) %>
+        <%= link_to "Delete ForumCategory", category_path(category), :confirm => "Are you sure you want to delete this category?", :method => :delete %>
       </span>
     </div>
     <% if category.forums.size > 0 %>
