--- a/lib/generators/forum_monster/templates/views/forums/index.html.erb
+++ b/lib/generators/forum_monster/templates/views/forums/index.html.erb
@@ -1,15 +1,15 @@
-<div class="right controls"><%= link_to "New Forum/Category", new_forum_path %></div>
-<% @forum_categories.each do |category| %>
+<div class="right controls"><%= link_to "New Forum/Group", new_forum_path %></div>
+<% @forum_groups.each do |group| %>
   <div class="module">
     <div class="module_header">
-      <%= category.title %>
+      <%= group.title %>
       <span class="controls right smaller">
         <%= link_to "New Forum", new_forum_path %>
-        <%= link_to "Edit Category", edit_forum_path(category) %>
-        <%= link_to "Delete Category", forum_path(category), :confirm => "Are you sure you want to delete this category?", :method => :delete %>
+        <%= link_to "Edit Forum Group", edit_forum_path(group) %>
+        <%= link_to "Delete Forum Group", forum_path(group), :confirm => "Are you sure you want to delete this forum group?", :method => :delete %>
       </span>
     </div>
-    <% if category.forums.size > 0 %>
+    <% if group.forums.size > 0 %>
     <div>
       <table>
         <tr class="smaller">
@@ -18,7 +18,7 @@
           <th>Posts</th>
           <th class="last_post" align="left">Last Post</th>
         </tr>
-        <% category.forums.each do |forum| %>
+        <% group.forums.each do |forum| %>
         <tr>
           <td class="icon"><%= image_tag 'ruby.png' %></td>
           <td class="description">
